kubernetes/services/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: sotongpt
  labels:
    app: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      # main container won't start if a postgres connection cannot be made or if
      # the pipelines container isn't working
      containers:
        # Core service container, which runs Open WebUI
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:v0.10.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 4
              memory: 8Gi
            limits:
              cpu: 4
              memory: 16Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - name: openwebui-storage
              mountPath: /app/backend/data
      volumes:
        - name: openwebui-storage
          persistentVolumeClaim:
            claimName: openwebui
