kubernetes/services/openwebui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: sotongpt
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
